# sukko_lake

./: .env.example  .gitignore  Makefile  Procfile  README.md  manage.py  pyproject.toml  requirements.txt  setup.cfg
static/: main.css
sukko_lake/: admin.py  asgi.py  forms.py  models.py  settings.py  urls.py  views.py  wsgi.py
sukko_lake/migrations/: 0001_initial.py  0002_fakefeedback_description.py  0003_alter_fakefeedback_options_alter_fakeusers_options_and_more.py  0004_alter_fakeusers_photo_alter_mainpicture_photo.py  0005_application.py  0006_alter_application_options.py  0007_alter_application_client_number.py  0008_remove_fakefeedback_mark_fakefeedback_title_and_more.py  0009_alter_fakefeedback_description.py  0010_alter_mainpicture_photo.py  0011_alter_mainpicture_options_alter_fakefeedback_title.py  0012_rename_user_id_fakefeedback_user.py  0013_alter_fakeusers_photo.py  0014_alter_fakeusers_photo_alter_mainpicture_photo.py
sukko_lake/services/: services.py  text.py
templates/: base.html  svg.html
templates/components/: about_us.html  carousel.html  nav_bar.html  review.html
